--- a/azure-vote/azure-vote/config_file.cfg
+++ b/azure-vote/azure-vote/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations
-TITLE = 'Azure Voting App'
-VOTE1VALUE = 'Cats'
-VOTE2VALUE = 'Dogs'
+TITLE = 'Azure Voting App by MNa'
+VOTE1VALUE = 'Little Cats'
+VOTE2VALUE = 'Big Dogs'
 SHOWHOST = 'false'
