--- a/azure-vote-all-in-one-redis.yaml
+++ b/azure-vote-all-in-one-redis.yaml
@@ -34,7 +34,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: azure-vote-front-MNa
+  name: azure-vote-front-mna
 spec:
   replicas: 1
   selector:
@@ -53,7 +53,7 @@ spec:
       nodeSelector:
         "beta.kubernetes.io/os": linux
       containers:
-      - name: azure-vote-front-MNa
+      - name: azure-vote-front-mna
         image: microsoft/azure-vote-front:v1
         ports:
         - containerPort: 811
@@ -69,7 +69,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: azure-vote-front-MNa
+  name: azure-vote-front-mna
 spec:
   type: LoadBalancer
   ports:
